[gd_scene load_steps=16 format=1]

[ext_resource path="res://script/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/flappy.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Background/background-day.png" type="Texture" id=3]
[ext_resource path="res://assets/Base and olthers/base.png" type="Texture" id=4]
[ext_resource path="res://assets/flash.png" type="Texture" id=5]
[ext_resource path="res://assets/Base and olthers/message.png" type="Texture" id=6]
[ext_resource path="res://fonts/f19.fnt" type="BitmapFont" id=7]
[ext_resource path="res://assets/Base and olthers/gameover.png" type="Texture" id=8]
[ext_resource path="res://assets/return0.png" type="Texture" id=9]
[ext_resource path="res://assets/samples/hit.wav" type="Sample" id=10]
[ext_resource path="res://assets/samples/point.wav" type="Sample" id=11]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 349.102, 10.5536 )
b = Vector2( 0, 10 )

[sub_resource type="Animation" id=2]

length = 4.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("background/bg:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -288, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background/bg1:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 288, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("background/chao0:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2, 2.01, 4 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -46, 445 ), Vector2( -334, 445 ), Vector2( -46, 445 ), Vector2( -334, 445 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("background/chao1:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 2, 2.01, 4 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 288, 445 ), Vector2( 0, 445 ), Vector2( 288, 445 ), Vector2( 0, 445 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("background/flash:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="SampleLibrary" id=4]

samples/hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/point = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="flappy" parent="." instance=ExtResource( 2 )]

visibility/visible = false
z/z = 1

[node name="limite_top" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.7962, -11.9747 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="shape" type="CollisionShape2D" parent="limite_top"]

transform/pos = Vector2( 1.7962, -11.9747 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="background" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bg = SubResource( 2 )
anims/flash = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "bg"

[node name="bg" type="Sprite" parent="background"]

transform/pos = Vector2( -264.662, 0 )
z/z = -1
texture = ExtResource( 3 )
centered = false

[node name="bg1" type="Sprite" parent="background"]

transform/pos = Vector2( 23.3382, 0 )
z/z = -1
texture = ExtResource( 3 )
centered = false

[node name="chao0" type="Sprite" parent="background"]

transform/pos = Vector2( -287.089, 445 )
z/z = 2
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 0, 1, 334, 112 )

[node name="chao1" type="Sprite" parent="background"]

transform/pos = Vector2( 46.911, 445 )
z/z = 2
texture = ExtResource( 4 )
centered = false

[node name="flash" type="Sprite" parent="background"]

visibility/opacity = 0.0
z/z = 2
texture = ExtResource( 5 )
centered = false

[node name="kill_flappy" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.7962, 436.199 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="kill_flappy"]

transform/pos = Vector2( 1.7962, 436.199 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="reload" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="HUD" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="curso_Fema" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 479.0
margin/right = 287.0
margin/bottom = 510.0
text = "
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="push" type="Sprite" parent="HUD"]

transform/pos = Vector2( 7, 28 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
centered = false

[node name="score" type="Label" parent="HUD"]

visibility/visible = false
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 82.0
margin/top = 9.0
margin/right = 122.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.773438, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_over" type="Sprite" parent="HUD"]

visibility/visible = false
transform/pos = Vector2( 1.85059, 180.371 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )
centered = false

[node name="restart" type="Sprite" parent="HUD"]

visibility/visible = false
transform/pos = Vector2( 57.1604, 214.83 )
texture = ExtResource( 9 )
centered = false

[node name="samples" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 4 )
config/pitch_random = 0.0

[connection signal="body_enter" from="kill_flappy" to="." method="_on_kill_flappy_body_enter"]

[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]


